op-share/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-share
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-share
  template:
    metadata:
      labels:
        app: op-share
        app.kubernetes.io/version: v1
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: op-share
          image: ghcr.io/noeulnight/op-share:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: op-share-data
              mountPath: /app/data
      volumes:
        - name: op-share-data
          persistentVolumeClaim:
            claimName: op-share-pvc
