op-share/service.yml
apiVersion: v1
kind: Service
metadata:
  name: op-share-service
spec:
  selector:
    app: op-share
  ports:
    - port: 3000
      targetPort: 3000
